Fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,17 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+  font-family: Calibri;
+}
+
+.font-head {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.font-small {
+  font-size: 16px;
+  font-weight: bold;
 }
 
 #root {
@@ -54,7 +65,7 @@ body {
 .p2{text-align: left;margin-top: 16px;margin-bottom: 0px;}
 .p3{text-align: left;margin-top: 0px;margin-bottom: 0px;white-space: nowrap;}
 .p4{text-align: left;padding-left: 13px;margin-top: 0px;margin-bottom: 0px;}
-.p5{text-align: left;padding-left: 8px;margin-top: 12px;margin-bottom: 0px;}
+.p5{text-align: left;padding-left: 8px;margin-top: 10px;margin-bottom: 0px;}
 .p6{text-align: left;padding-left: 32px;margin-top: 0px;margin-bottom: 0px;}
 .p7{text-align: left;padding-left: 56px;margin-top: 0px;margin-bottom: 0px;}
 .p8{text-align: left;padding-left: 80px;padding-right: 72px;margin-top: 0px;margin-bottom: 0px;text-indent: -24px;}
